# str-mouse

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
checkpoints/emnist_pretrain/best_pretrain-27-class/: best.ckpt
checkpoints/emnist_pretrain/best_pretrain-62-class/: best.ckpt
checkpoints/mouse_finetune/best_finetune-53-class/: best.ckpt
checkpoints/mouse_finetune/best_finetune-63-class/: best.ckpt
docs/: attempt_2-5.md  attempt_2.md  progress.md
src/api/: DEPLOY.md  main.py  recorder.html  widget.html
src/data/: cleanup_dataset.py  utils.py
src/decode/: real_time.py
src/ml/: emnist_pretrain.py  finetune.py  pretrain.py  utils.py
src/visualize/: show_my_data.py
