[project]
name = "strmouse"
version = "0.1.0"
description = "Convert mouse velocity data into characters on device"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "colorama>=0.4.6",
    "datasets>=4.4.2",
    "fastapi[standard]>=0.128.0",
    "lightning>=2.6.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "pynput>=1.8.1",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "wandb>=0.23.1",
]
